--- a/Css.css
+++ b/Css.css
@@ -418,3 +418,16 @@ image {
 #myposts .postTitl2 a {
     color:#6DA47D;
 }
+/*快速评论*/
+
+#div_digg {
+  position: fixed;
+  bottom: 10px;
+  right: 15px;
+  border: 2px solid #ECD7B1;
+  padding: 10px;
+  width: 140px;
+  background-color: #fff;
+  border-radius: 5px 5px 5px 5px !important;
+  box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
+}
